# cache-implementation-challenge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REPOSITORY_STRUCTURE.md  build_all.sh  challenge_specification.md  requirements.txt  test_all.sh
analysis/: create_table_images.py  medium_article.md
benchmarks/: BENCHMARK_GUIDE.md  BenchmarkJavaStatistical.java  Cargo.toml  FairConcurrentBenchmark.java  analyze_true_parallelism.py  benchmark_python_statistical.py  convert_rust_results.py  fair_concurrent_benchmark.py  generate_fair_concurrent_report.py  run_fair_concurrent_benchmarks.sh
benchmarks/benches/: benchmark_suite.rs
benchmarks/results/: .gitkeep
benchmarks/src/: lib.rs
implementations/1_claude_python/: smart_cache.py
implementations/2_qwen30b_java/: IntelligentCache.java
implementations/3_qwen30b_rust/: Cargo.toml
implementations/3_qwen30b_rust/src/: lib.rs
implementations/4_qwen235b_rust/: Cargo.toml
implementations/4_qwen235b_rust/src/: lib.rs
implementations/5_qwen435b_rust/: Cargo.toml
implementations/5_qwen435b_rust/src/: lib.rs
implementations/6_glm45_rust/: Cargo.toml
implementations/6_glm45_rust/src/: lib.rs
