[package]
name = "cache_benchmarks"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "benchmark_suite"
harness = false

[[bin]]
name = "fair_concurrent"
path = "src/bin/fair_concurrent.rs"

[[bin]]
name = "fair_concurrent_full"
path = "src/bin/fair_concurrent_full.rs"

[[bin]]
name = "fair_concurrent_all"
path = "src/bin/fair_concurrent_all.rs"

[dependencies]
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
threadpool = "1.8"  # Für faire Thread-Pool basierte Tests
crossbeam = "0.8"
rand = "0.8"
md5 = "0.7"
parking_lot = "0.12"
chrono = "0.4"

qwen30b_cache = { path = "../implementations/3_qwen30b_rust" }
qwen235b_cache = { path = "../implementations/4_qwen235b_rust" }
qwen435b_cache = { path = "../implementations/5_qwen435b_rust" }
# GLM-4.5 has compilation errors - excluding from benchmarks
# glm45_cache = { path = "../implementations/6_glm45_rust" }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
